[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-mcp-server"
version = "1.0.0"
description = "Memory MCP Server with SSE and Streamable HTTP support for Anthropic API"
authors = [
    {name = "Vladikasik", email = "vladikasik@memory.aynshteyn.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
memory-mcp-server = "echo_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["echo_mcp_server"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39" 